en/v0.13.0/_sources/theory/resources.rst.txt
Resources List
==============

Foundations
-----------

* `Differential privacy: A primer for a non-technical audience <https://salil.seas.harvard.edu/publications/differential-privacy-primer-non-technical-audience>`_
* `The Algorithmic Foundations of Differential Privacy <https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf>`_


Applying Differential Privacy
-----------------------------
* `The Privacy Deployments Registry <https://registry.oblivious.com/>`_ provides examples of the privacy budgets chosen by real-world deployments.
* `DP Wizard <https://pypi.org/project/dp_wizard/>`_ produces Jupyter notebooks that demonstrate the OpenDP API on your own data.


Learning About Differential Privacy
-----------------------------------

* `Courses & Educational Materials from the Harvard University Privacy Tools Project <https://privacytools.seas.harvard.edu/courses-educational-materials>`_
* `Designing Access with Differential Privacy <https://admindatahandbook.mit.edu/book/latest/diffpriv.html>`_
* `Programming Differential Privacy <https://programming-dp.com/>`_
* `Privacy and Confidentiality Protection Overview <https://www2.census.gov/cac/nac/meetings/2019-05/garfinkel-privacy-confidentiality-protection.pdf>`_
* `Hands-On Differential Privacy <https://www.oreilly.com/library/view/hands-on-differential-privacy/9781492097730/>`_ is co-authored by the OpenDP Library architect
* A short list of `Educational Resources <https://opendp.github.io/learning/>`_ maintained by the community


Papers
------

* `The Complexity of Differential Privacy <https://privacytools.seas.harvard.edu/files/privacytools/files/complexityprivacy_1.pdf>`_
* `Calibrating Noise to Sensitivity in Private Data Analysis <https://people.csail.mit.edu/asmith/PS/sensitivity-tcc-final.pdf>`_ (Laplace mechanism)
* `On Significance of the Least Significant Bits For Differential Privacy <https://www.microsoft.com/en-us/research/wp-content/uploads/2012/10/lsbs.pdf>`_ (Snapping mechanism and how floating-point numbers and the laplace mechanism leak)
* `Mechanism Design via Differential Privacy <https://www.microsoft.com/en-us/research/wp-content/uploads/2016/02/mdviadp.pdf>`_ (Exponential mechanism)
* `Differential Privacy on Finite Computers <https://arxiv.org/pdf/1709.05396.pdf>`_ (Geometric mechanism)
* `Privacy-preserving Statistical Estimation with Optimal Convergence Rates <https://cs-people.bu.edu/ads22/pubs/2011/stoc194-smith.pdf>`_ (Sample/aggregate and quantiles)
* `Deep Learning with Differential Privacy <https://arxiv.org/pdf/1607.00133.pdf>`_ (Gradient descent)
* `U.S. Broadband Coverage Data Set: A Differentially Private Data Release <https://arxiv.org/pdf/2103.14035.pdf>`_
* `A Feasibility Study of Differentially Private Summary Statistics and Regression Analyses for Administrative Tax Data <https://arxiv.org/pdf/2110.12055.pdf>`_ 